# armor_py_api

./: .buildinfo  CMakeLists.txt  Makefile  README.md  armor_api.html  armor_client.html  armor_exceptions.html  armor_manipulation_client.html  armor_query_client.html  armor_utils_client.html  catalog-v001.xml  exceptions.html  fabfile.py  genindex.html  index.html  make.bat  manipulation.html  objects.inv  package.xml  py-modindex.html  query.html  search.html  searchindex.js  setup.py  sysutil.html
.doctrees/: armor_api.doctree  armor_client.doctree  armor_exceptions.doctree  armor_manipulation_client.doctree  armor_query_client.doctree  armor_utils_client.doctree  environment.pickle  index.doctree
_modules/: index.html
_modules/armor_api/: armor_client.html  armor_exceptions.html  armor_manipulation_client.html  armor_query_client.html  armor_utils_client.html  exceptions.html  manipulation.html  query.html  sysutil.html
_sources/: armor_api.txt  index.txt
docs/: Makefile  armor_api.html  exceptions.html  genindex.html  index.html  make.bat  manipulation.html  objects.inv  py-modindex.html  pyarmor.html  query.html  search.html  searchindex.js  sysutil.html
docs/.doctrees/: armor_api.doctree  environment.pickle  exceptions.doctree  index.doctree  manipulation.doctree  query.doctree  sysutil.doctree
docs/_modules/: index.html
docs/_modules/armor_api/: exceptions.html  manipulation.html  query.html  sysutil.html
docs/_sources/: index.txt  manipulation.txt  query.txt
docs/source/: armor_api.rst  armor_client.rst  armor_exceptions.rst  armor_manipulation_client.rst  armor_query_client.rst  armor_utils_client.rst  conf.py  index.rst  pyarmor.rst
doctrees/: armor_api.doctree  environment.pickle  exceptions.doctree  index.doctree  manipulation.doctree  query.doctree  sysutil.doctree
scripts/: pyarmor.py
scripts/armor_api/: __init__.py  armor_client.py  armor_exceptions.py  armor_manipulation_client.py  armor_query_client.py  armor_utils_client.py  client.py  client_test.py  exceptions.py  manipulation.py  query.py  sysutil.py  test.py
source/: conf.py  exceptions.rst  sysutil.rst
test/: catalog-v001.xml  inferred_test.owl  test.owl
