<?xml version="1.0"?>
<package>
  <name>pyarmor</name>
  <version>0.1.0</version>
  <description>Pyarmor- a python interface for armor clients</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="alessio.capitanelli@dibris.unige.it">Alessio Capitanelli</maintainer>
  <author email="alessio.capitanelli@dibris.unige.it">Alessio Capitanelli</author>

  <license>GPLv2</license>

  <url type="website">https://github.com/EmaroLab</url>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
