<?xml version="1.0"?>
<package>
  <name>armor_py_api</name>
  <version>0.1.0</version>
  <description>armor_py_api- a python interface for armor clients</description>
  <maintainer email="alessio.capitanelli@dibris.unige.it">Alessio Capitanelli</maintainer>
  <author email="alessio.capitanelli@dibris.unige.it">Alessio Capitanelli</author>

  <license>GPLv2</license>

  <url type="website">https://github.com/EmaroLab</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>armor</build_depend>
  <build_depend>armor_msgs</build_depend>
  <build_depend>multi_ontology_reference</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>armor</run_depend>
  <run_depend>armor_msgs</run_depend>
  <run_depend>multi_ontology_reference</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
